<resources>
    <string name="app_name">QuizApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="bottom_wave_image">Bottom Wave Image</string>
    <string name="welcome_to_quiz_master">Welcome to Quiz Master</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="get_started">Get Started</string>
    <string name="app_hero_image">App Hero Image</string>
    <string name="search">Search</string>
    <string name="a_option">A: Option</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="app_drawer_button">App Drawer Button</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="user_display1">User Display</string>
    <string name="user_name1">User Name</string>
    <string name="date_picker_button">Date Picker Button</string>
    <string name="app_drawer_close_button">App drawer close button</string>
    <string name="user_display">User Display</string>
    <string name="user_name">User Name</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
</resources>